# obs-studio

libobs/util/: cf-lexer.c  cf-lexer.h
plugins/: CMakeLists.txt
plugins/obs-ffmpeg/: obs-ffmpeg-source.c
plugins/obs-filters/data/: deinterlace_filter.effect
plugins/win-mf/: CMakeLists.txt  mf-async-callback.hpp  mf-common.cpp  mf-common.hpp  mf-encoder-descriptor.cpp  mf-encoder-descriptor.hpp  mf-h264-enc.cpp  mf-h264-encoder.cpp  mf-h264-encoder.hpp  mf-h264.cpp  mf-plugin.c  mf-plugin.cpp
plugins/win-mf/data/locale/: en-US.ini
